--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -10,6 +10,7 @@
     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
         
     <application
@@ -69,7 +70,7 @@
 			android:label="@string/cons_plot_header" >
         </activity>
         <activity
-			android:name="de.anipe.verbrauchsapp.io.GDriveStoreActivity"
+			android:name="de.anipe.verbrauchsapp.GDriveStoreActivity"
 			android:label="@string/store_drive_label" >
             <data android:mimeType="text/xml" />
             <data android:mimeType="text/csv" />
