--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> 
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/> 
+    <uses-permission android:name="android.permission.INTERNET" />
         
     <application
         android:allowBackup="true"
