--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,9 +12,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> 
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/> 
-    <uses-permission android:name="android.permission.INTERNET" />
         
     <application
         android:allowBackup="true"
@@ -52,7 +49,7 @@
 			android:label="@string/car_dataset_label" >
         </activity>
         <activity
-			android:name="de.anipe.verbrauchsapp.CSVImportActivity"
+			android:name="de.anipe.verbrauchsapp.ConsumptionImportActivity"
 			android:label="@string/csv_import_label" >
         </activity>
         <activity
