--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,8 +20,7 @@
         android:theme="@style/AppTheme" >
         
         <meta-data 
-			android:name="com.google.android.gms.version" 
-			android:value="@integer/google_play_services_version" />
+			android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <meta-data android:name="de.anipe.verbrauchsapp.ApplicationId" android:value="@string/app_id"/>
         
         <activity
@@ -49,7 +48,7 @@
 			android:label="@string/car_dataset_label" >
         </activity>
         <activity
-			android:name="de.anipe.verbrauchsapp.ConsumptionImportActivity"
+			android:name="de.anipe.verbrauchsapp.ImportActivity"
 			android:label="@string/csv_import_label" >
         </activity>
         <activity
