--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,6 +69,14 @@
 			android:label="@string/cons_plot_header" >
         </activity>
         <activity
+			android:name="de.anipe.verbrauchsapp.XYPlot"
+			android:label="@string/cons_plot_header" >
+        </activity>
+        <activity
+			android:name="de.anipe.verbrauchsapp.GraphViewPlot"
+			android:label="@string/cons_plot_header" >
+        </activity>
+        <activity
 			android:name="de.anipe.verbrauchsapp.GDriveStoreActivity"
 			android:label="@string/store_drive_label" >
             <data android:mimeType="text/xml" />
