--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
         
     <application
+    	android:supportsRtl="true"
         android:allowBackup="true"
         android:icon="@drawable/gas_station"
         android:label="@string/app_name"
