Switched import activity to swipe tab activity
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@36 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,6 +53,10 @@
 			android:label="@string/csv_import_label" >
         </activity>
         <activity
+			android:name="de.anipe.verbrauchsapp.TabbedImportActivity"
+			android:label="@string/csv_import_label" >
+        </activity>
+        <activity
 			android:name="de.anipe.verbrauchsapp.PictureImportActivity"
 			android:label="@string/picture_import_label" >
         </activity>
