Prepared reading files from Google Drive for importing (listing works)
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/sterner-VerbrauchsApp/trunk@37 e74131eb-593b-4f00-8808-e0f5b2e53e2d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,6 +82,9 @@
 			android:label="@string/cons_plot_header" >
         </activity>
         <activity
+			android:name="de.anipe.verbrauchsapp.GDriveBaseActivity" >
+	    </activity>
+        <activity
 			android:name="de.anipe.verbrauchsapp.GDriveStoreActivity"
 			android:label="@string/store_drive_label" >
             <data android:mimeType="text/xml" />
