--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,7 @@
         <activity
             android:name="de.anipe.verbrauchsapp.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
