--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile "com.android.support:appcompat-v7:21.0.3"
+    compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.google.android.gms:play-services-drive:6.5.87'
     compile files('libs/achartengine-1.1.0.jar')
     compile files('libs/androidplot-core-0.6.0.jar')
