--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="de.anipe.verbrauchsapp">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -12,7 +13,9 @@
         android:icon="@drawable/gas_station"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -68,7 +71,7 @@
             android:name="de.anipe.verbrauchsapp.GraphViewPlot"
             android:label="@string/cons_plot_header"
             android:parentActivityName=".MainActivity" />
-        <activity android:name="de.anipe.verbrauchsapp.GDriveBaseActivity"></activity>
+        <activity android:name="de.anipe.verbrauchsapp.GDriveBaseActivity" />
         <activity
             android:name="de.anipe.verbrauchsapp.GDriveStoreActivity"
             android:label="@string/store_drive_label"
