--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.jdom:jdom2:2.0.6'
+    implementation 'com.androidplot:androidplot-core:0.6.1'
+    implementation 'com.jjoe64:graphview:3.1.4'
+
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.google.android.gms:play-services-drive:12.0.1'
-    implementation files('libs/achartengine-1.1.0.jar')
-    implementation files('libs/androidplot-core-0.6.0.jar')
-    implementation files('libs/graphview-3.1.jar')
-    implementation files('libs/jdom-2.0.5.jar')
+    implementation 'com.google.android.gms:play-services-drive:7.5.0'
 }
