--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName '1.1'
     }
 
     buildTypes {
@@ -23,11 +23,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.jdom:jdom2:2.0.6'
-    implementation 'com.androidplot:androidplot-core:0.6.1'
     implementation 'com.jjoe64:graphview:3.1.4'
 
     implementation 'com.android.support:support-v4:27.1.0'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.google.android.gms:play-services-drive:7.5.0'
 }
