--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 
@@ -27,5 +33,6 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.google.android.gms:play-services-drive:7.5.0'
+    implementation 'com.google.android.gms:play-services-drive:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
 }
