--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 27
         versionCode 1
-        versionName '1.1'
+        versionName '1.2'
     }
     buildTypes {
         release {
@@ -45,9 +45,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'org.jdom:jdom2:2.0.6'
     implementation 'com.jjoe64:graphview:3.1.4'
+
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+
     implementation 'com.google.android.gms:play-services-drive:12.0.1'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
 }
