--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'org.jdom:jdom2:2.0.6'
     implementation 'com.jjoe64:graphview:3.1.4'
+    implementation 'com.github.ganfra:material-spinner:2.0.0'
 
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
