--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,11 @@
 apply plugin: 'com.android.application'
 
-// Create a variable called keystorePropertiesFile, and initialize it to your
-// keystore.properties file, in the rootProject folder.
-def keystorePropertiesFile = rootProject.file("keystore.properties")
-
-// Initialize a new Properties() object called keystoreProperties.
-def keystoreProperties = new Properties()
-
-// Load your keystore.properties file into the keystoreProperties object.
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+if(project.hasProperty("VerbrauchsApp.signing")
+    && new File(project.property("VerbrauchsApp.signing") + ".gradle").exists()) {
+  apply from: project.property("VerbrauchsApp.signing") + ".gradle";
+}
 
 android {
-    signingConfigs {
-        config {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
-            storePassword keystoreProperties['storePassword']
-        }
-    }
     compileSdkVersion 27
     defaultConfig {
         applicationId 'de.anipe.verbrauchsapp'
@@ -32,7 +19,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            // signingConfig signingConfigs.config
         }
     }
     compileOptions {
