--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
 build:
   interruptible: true
   stage: build
-  script: gradle --build-cache assemble
+  script: ./gradlew --build-cache assemble
   artifacts:
     paths:
       - app/build/outputs/apk/debug/app-debug.apk
@@ -23,7 +23,7 @@ build:
 test:
   interruptible: true
   stage: test
-  script: gradle check
+  script: ./gradlew check
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
