--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:fullBackupContent="@xml/backup_descriptor"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
@@ -27,8 +28,8 @@
         <activity
             android:name="de.anipe.verbrauchsapp.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -69,7 +70,8 @@
         <activity
             android:name="de.anipe.verbrauchsapp.GDriveStoreActivity"
             android:label="@string/store_drive_label"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:exported="false">
             <intent-filter>
                 <data android:mimeType="text/xml" />
                 <data android:mimeType="text/csv" />
