--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    lintOptions {
-        // abortOnError false
-        lintConfig file("../lint.xml")
+    lint {
+        lintConfig file('../lint.xml')
     }
 }
 
