--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    ":assignee(kriese)",
-    ":switchToGradleLite",
-    ":dependencyDashboard"
-  ],
-  "automergeType": "branch",
+  "extends": ["visualon/renovate-config"],
   "semanticCommits": "enabled",
   "major": {
     "dependencyDashboardApproval": true
-  }
+  },
+  "packageRules": [
+    {
+      "description": "group gradle major updates",
+      "matchDepNames": ["com.android.tools.build:gradle", "gradle"],
+      "matchUpdateTypes": ["major"],
+      "groupName": "gradle-major"
+    }
+  ]
 }
