--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# TODO: remove https://stackoverflow.com/a/76782003
+android.nonFinalResIds=false
