--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - renovate/*
   pull_request:
     branches: [ "main" ]
 
@@ -20,7 +22,5 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-#    - name: Grant execute permission for gradlew
-#      run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
